Fixed text cropping on other browsers

--- a/src/app/components/projects-grid/projects-grid.scss
+++ b/src/app/components/projects-grid/projects-grid.scss
@@ -5,6 +5,7 @@
     padding-top: 15px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    padding-bottom: 15px;
     gap: 15px;
 }
 
@@ -57,20 +58,24 @@ h3 {
     font-weight: 600;
     font-size: 40px;
     margin-bottom: 0;
+    flex-shrink: 0;
+    line-height: 1.2;
 }
 
 p {
     font-weight: 400;
     font-size: 25px;
     margin-bottom: 0;
+    flex-shrink: 0;
+    line-height: 1.2;
 }
 
 img {
     border-radius: 16px;
-    width: auto;
-    height: 100%;
+    width: 100%;
     max-width: 100%;
-    max-height: 90%;
+    flex: 1;
+    min-height: 0;
     object-fit: cover;
     margin-bottom: 10px;
 }
